Update STA302 Final Project.Rmd

--- a/STA302 Final Project.Rmd
+++ b/STA302 Final Project.Rmd
@@ -166,7 +166,7 @@ new_data <- data %>%
   filter_all(all_vars(!is.infinite(.))) %>%
   filter_all(all_vars(. != 0))
 
-view(new_data)
+#view(new_data)
 
 # Create the linear model using cleaned data
 model2 <- lm(sqrt_count_kiss ~ age + counts_pictures + counts_profileVisits + country_pop + genderLooking, data = new_data)
@@ -189,7 +189,7 @@ hist(
   )
 
 #qqplot: Check normality 
-qqnorm(y2, xlim = c(-3, 3), ylim = c(-20, 20))
+qqnorm(y2)
 qqline(y2)
 
 
